syntax = "proto3";

package noctiforge.registry;

service RegistryService {
  rpc Pull(RegistryPullRequest) returns (stream RegistryPullResponse);
  rpc Push(stream RegistryPushRequest) returns (RegistryPushResponse);
}

message RegistryPullRequest {
  string digest = 1;
}

message RegistryPullResponse {
  bytes data = 1;
}

message RegistryPushRequest {
  bytes data = 1;
} 
message RegistryPushResponse {
  string digest = 1;
}
